--- a/package.json
+++ b/package.json
@@ -8,15 +8,24 @@
     "npm": "5.0.4"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "bson": "^4.0.2",
     "cookie-session": "^1.3.3",
     "express": "^4.17.1",
     "mongoose": "^5.7.8",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "stripe": "^7.13.0",
+    "styled-components": "^4.4.1"
   }
 }
